Superset/Deployment/AWS/EKS/k8s/04-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superset-worker
  namespace: superset
  labels:
    app: superset-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: superset-worker
  template:
    metadata:
      labels:
        app: superset-worker
    spec:
      containers:
        - name: worker
          image: apache/superset:4.1.1
          volumeMounts:
            - name: config
              mountPath: /app/pythonpath/superset_config.py
              subPath: superset_config.py
          command:
            - /bin/sh
            - -c
            - celery --app=superset.tasks.celery_app:app worker --pool=prefork -O fair -c 2 --loglevel=INFO
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "1"
              memory: "2Gi"
      volumes:
        - name: config
          configMap:
            name: superset-config
