Superset/Deployment/AWS/EKS/k8s/05-beat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superset-beat
  namespace: superset
  labels:
    app: superset-beat
spec:
  # NEVER scale beat above 1
  replicas: 1
  selector:
    matchLabels:
      app: superset-beat
  template:
    metadata:
      labels:
        app: superset-beat
    spec:
      containers:
        - name: beat
          image: apache/superset:6.0.0
          securityContext:
            runAsUser: 0
          volumeMounts:
            - name: config
              mountPath: /app/pythonpath/superset_config.py
              subPath: superset_config.py
            - name: bootstrap
              mountPath: /app/docker/docker-bootstrap.sh
              subPath: docker-bootstrap.sh
          command:
            - /bin/sh
            - -c
            - /app/docker/docker-bootstrap.sh beat
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"
      volumes:
        - name: config
          configMap:
            name: superset-config
        - name: bootstrap
          configMap:
            name: superset-bootstrap
            defaultMode: 0755
